--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
+
 <html>
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
+        <style>
+            .prioridad{
+                color: cyan;
+            }
+        </style>
     </head>
+    
     <body>
-        <div>Desarrollo Web y Patrones</div>
+        <div>
+            <h1 id="tituloPrincipal" style="text-align:center;">Home</h1>
+            <p>Desarrollo Web y Patrones</p>
+        </div>
+        <p class="parrofoNegrita parrafoEspecial">Lorem ipsum dolor sit amet consectetur adipiscing elit morbi accumsan, nibh potenti nulla id imperdiet diam magna nullam. Sodales metus sociis nibh quisque mi urna, taciti aenean habitant primis sagittis dui, ultrices tempor mauris cum vulputate. Malesuada diam at erat torquent fermentum molestie aenean nulla, nec sapien senectus ullamcorper massa quisque sociis, ac potenti placerat blandit cursus dui hac.</p>
+        <p class="parrofoNegrita">Vehicula nibh porttitor mus ridiculus dui proin purus diam convallis, maecenas mollis malesuada integer id nec ullamcorper nisi, faucibus torquent quam tellus ac libero hendrerit ultrices. Neque dui eget nisi tempus habitasse arcu praesent lacinia, lobortis nostra conubia mi felis nibh posuere, volutpat sagittis scelerisque tellus massa magna commodo. Luctus purus at penatibus odio eleifend hendrerit gravida, pretium felis fringilla phasellus ac cum, dui aenean nostra nam ornare tristique.</p>
+        <p>Pharetra cursus <span class="parrofoNegrita"> per auctor vel aliquam nascetur sem nisl primis</span> rutrum, lacinia ullamcorper diam duis pellentesque iaculis etiam inceptos quisque maecenas, tristique eleifend habitant aliquet tincidunt nulla dui ultricies bibendum. Volutpat torquent blandit id neque sollicitudin magnis congue egestas, tortor feugiat bibendum eu taciti facilisi nec. Proin iaculis sed ultrices suspendisse quisque cubilia nam, consequat maecenas aptent ridiculus fusce semper posuere, mattis ornare viverra blandit sociosqu natoque.</p>
+        <br>
+        <br>
+        <br>
+        <p class="prioridad" style="color: purple">Ejemplo de prioridades CSS</p>
+        <br>
+        <br>
+        <br>
+        <p class="prioridad1 prioridad2">Ultima linea</p>
+        <p>Ultima linea</p>
     </body>
 </html>
