--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,8 +26,16 @@
         <p class="prioridad" style="color: purple">Ejemplo de prioridades CSS</p>
         <br>
         <br>
+        <audio controls>
+            <source src="audios/RelsB.mp3" type="audio/mpeg">
+            Your browser does not support the <code>audio</code> tag.
+        </audio>
+        <br>
         <br>
         <p class="prioridad1 prioridad2">Ultima linea</p>
+        <div>
+            <p class=" ejemploCajas  ">Ejemplo de cajas</p>
+        </div>
         <p>Ultima linea</p>
     </body>
 </html>
